--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://iblameharsh.github.io/contact-list-app",
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
+"homepage": "https://iblameharsh.github.io/contact-list-app",
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
